# digital-surface-regularization-TVCG

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
